fix: solve typos

--- a/speedcube.ipynb
+++ b/speedcube.ipynb
@@ -1,18 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "d51066a0",
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e3486252",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### import pandas as pd\n",
-    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import numpy as np \n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 29,
    "id": "3c12a306",
    "metadata": {
     "scrolled": true
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 30,
    "id": "abe43589",
    "metadata": {},
    "outputs": [],
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 31,
    "id": "29f27a98",
    "metadata": {},
    "outputs": [
@@ -53,7 +55,7 @@
        "(14.358800000000002, 19.5717)"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 32,
    "id": "47a76b5d",
    "metadata": {},
    "outputs": [
@@ -79,7 +81,7 @@
        "(17.42311831103679, -0.004349448320558161)"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 33,
    "id": "0f67fca9",
    "metadata": {
     "scrolled": true
@@ -124,13 +126,13 @@
     "plt.xlabel('Index')\n",
     "plt.ylabel('Time')\n",
     "plt.title('Time vs Index')\n",
-    "plt.plot(x, t0 + t1*x, \"b\")\n",
+    "plt.plot(X, t0 + t1*X, \"b\")\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 34,
    "id": "d57e3302",
    "metadata": {},
    "outputs": [
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 35,
    "id": "38ab267b",
    "metadata": {},
    "outputs": [
@@ -187,13 +189,13 @@
     "plt.xlabel('Index')\n",
     "plt.ylabel('Filtered Time')\n",
     "plt.title('Filtered Time vs Index')\n",
-    "plt.plot(x, t0 + t1*x, \"b\")\n",
+    "plt.plot(X, t0 + t1*X, \"b\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 36,
    "id": "bcaa7992",
    "metadata": {},
    "outputs": [
@@ -207,7 +209,6 @@
    ],
    "source": [
     "# Machine learning to predict my average in certain number of solves\n",
-    "import sklearn.linear_model\n",
     "model = sklearn.linear_model.LinearRegression()\n",
     "model.fit(Xsample, ysample)\n",
     "X_new = [[200]]\n",
