feat: move all the libraries to the top

--- a/speedcube.ipynb
+++ b/speedcube.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "e3486252",
+   "execution_count": 37,
+   "id": "b71dc175",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np \n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import linear_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "3c12a306",
    "metadata": {
     "scrolled": true
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "id": "abe43589",
    "metadata": {},
    "outputs": [],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "29f27a98",
    "metadata": {},
    "outputs": [
@@ -55,7 +56,7 @@
        "(14.358800000000002, 19.5717)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "47a76b5d",
    "metadata": {},
    "outputs": [
@@ -81,7 +82,7 @@
        "(17.42311831103679, -0.004349448320558161)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,6 @@
     "y = times[:, 1]\n",
     "X = times[:, 0]\n",
     "\n",
-    "from sklearn import linear_model\n",
     "lin1 = linear_model.LinearRegression()\n",
     "Xsample = np.c_[X]\n",
     "ysample = np.c_[y]\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "id": "0f67fca9",
    "metadata": {
     "scrolled": true
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "d57e3302",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "38ab267b",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "bcaa7992",
    "metadata": {},
    "outputs": [
